--- a/prj.lab/CMakeLists.txt
+++ b/prj.lab/CMakeLists.txt
@@ -1,1 +1,14 @@
 add_subdirectory(PriorityQueue)
+add_subdirectory(matplotproj)
+
+include(FetchContent)
+FetchContent_Declare(matplotplusplus
+        GIT_REPOSITORY https://github.com/alandefreitas/matplotplusplus
+        GIT_TAG origin/master)
+FetchContent_GetProperties(matplotplusplus)
+if(NOT matplotplusplus_POPULATED)
+    FetchContent_Populate(matplotplusplus)
+    add_subdirectory(${matplotplusplus_SOURCE_DIR} ${matplotplusplus_BINARY_DIR} EXCLUDE_FROM_ALL)
+endif()
+
+target_link_libraries(matplotproj PUBLIC matplot)
